--- a/repaso_2.ipynb
+++ b/repaso_2.ipynb
@@ -6,7 +6,7 @@
       "name": "repaso_2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMTW7jdfdWiLVHBBpp5rdJL",
+      "authorship_tag": "ABX9TyO2Nm6zve/zVCx+FXsV+gj9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
       ],
       "metadata": {
         "id": "xA75RQ4lMej6",
-        "outputId": "1ca8ba24-170f-4c2b-eed9-180453bf4e4f",
+        "outputId": "df9f9ff3-3e99-40ee-90c3-144223c6ddd3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -72,7 +72,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Enz5IWENRWAb",
-        "outputId": "c46dbfcb-79b7-4f4e-f5db-16a878e9193f"
+        "outputId": "eea86734-2dd8-4f96-d8b6-92197e74b9e3"
       },
       "execution_count": 3,
       "outputs": [
@@ -109,7 +109,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dFkxO2u0aTku",
-        "outputId": "a58a297a-a545-4f8c-f794-a5301b4933a7"
+        "outputId": "2f961f7a-e758-4902-eb74-a79e68c96467"
       },
       "execution_count": 5,
       "outputs": [
@@ -117,16 +117,16 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2022-06-15 02:01:36--  https://unket.s3.sa-east-1.amazonaws.com/data/fifa.csv\n",
-            "Resolving unket.s3.sa-east-1.amazonaws.com (unket.s3.sa-east-1.amazonaws.com)... 52.95.164.43\n",
-            "Connecting to unket.s3.sa-east-1.amazonaws.com (unket.s3.sa-east-1.amazonaws.com)|52.95.164.43|:443... connected.\n",
+            "--2022-06-16 02:08:39--  https://unket.s3.sa-east-1.amazonaws.com/data/fifa.csv\n",
+            "Resolving unket.s3.sa-east-1.amazonaws.com (unket.s3.sa-east-1.amazonaws.com)... 52.95.165.15\n",
+            "Connecting to unket.s3.sa-east-1.amazonaws.com (unket.s3.sa-east-1.amazonaws.com)|52.95.165.15|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 2989091 (2.9M) [text/csv]\n",
             "Saving to: ‘fifa.csv’\n",
             "\n",
-            "fifa.csv            100%[===================>]   2.85M  2.41MB/s    in 1.2s    \n",
+            "fifa.csv            100%[===================>]   2.85M  3.12MB/s    in 0.9s    \n",
             "\n",
-            "2022-06-15 02:01:38 (2.41 MB/s) - ‘fifa.csv’ saved [2989091/2989091]\n",
+            "2022-06-16 02:08:41 (3.12 MB/s) - ‘fifa.csv’ saved [2989091/2989091]\n",
             "\n"
           ]
         }
@@ -154,7 +154,7 @@
           "height": 404
         },
         "id": "bsuEKSqBadNK",
-        "outputId": "e46d7af3-f547-4476-8f30-bc20a95a5948"
+        "outputId": "19969331-d239-4eb9-b731-3fe4d43a216a"
       },
       "execution_count": 7,
       "outputs": [
@@ -208,7 +208,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-00f17945-5d6a-48ea-8fa3-0f7c11aee064\">\n",
+              "  <div id=\"df-83026883-0179-4b26-9512-816f58106f2f\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -376,7 +376,7 @@
               "</table>\n",
               "<p>5 rows × 62 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-00f17945-5d6a-48ea-8fa3-0f7c11aee064')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-83026883-0179-4b26-9512-816f58106f2f')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -427,12 +427,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-00f17945-5d6a-48ea-8fa3-0f7c11aee064 button.colab-df-convert');\n",
+              "          document.querySelector('#df-83026883-0179-4b26-9512-816f58106f2f button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-00f17945-5d6a-48ea-8fa3-0f7c11aee064');\n",
+              "          const element = document.querySelector('#df-83026883-0179-4b26-9512-816f58106f2f');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -466,7 +466,7 @@
       ],
       "metadata": {
         "id": "lFYJlAlsz4MH",
-        "outputId": "8a8676d5-91c2-43e1-8d5f-b7d4a59d49e7",
+        "outputId": "a764a588-4fd6-4a84-8485-2ec4c88d3432",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -495,7 +495,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "O9mv4pYEU4GT",
-        "outputId": "1ede6a90-9a06-4d9e-faba-335318f05bf7"
+        "outputId": "4cbcbd9e-1a68-4323-896e-d1ca67215613"
       },
       "execution_count": 9,
       "outputs": [
@@ -546,7 +546,7 @@
           "height": 386
         },
         "id": "0ygWJHHQViOO",
-        "outputId": "318c70d7-57bb-42e5-e04b-9f0f6196760d"
+        "outputId": "8a5b83fd-8c7a-43c2-8586-1bf2debbce16"
       },
       "execution_count": 11,
       "outputs": [
@@ -593,7 +593,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b0ee08df-0fe0-4f90-a309-7406852e34cd\">\n",
+              "  <div id=\"df-b9095685-44a5-4251-9d4c-19d9592522b6\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -761,7 +761,7 @@
               "</table>\n",
               "<p>5 rows × 62 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b0ee08df-0fe0-4f90-a309-7406852e34cd')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b9095685-44a5-4251-9d4c-19d9592522b6')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -812,12 +812,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-b0ee08df-0fe0-4f90-a309-7406852e34cd button.colab-df-convert');\n",
+              "          document.querySelector('#df-b9095685-44a5-4251-9d4c-19d9592522b6 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-b0ee08df-0fe0-4f90-a309-7406852e34cd');\n",
+              "          const element = document.querySelector('#df-b9095685-44a5-4251-9d4c-19d9592522b6');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -868,7 +868,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ieOhvgeUad0t",
-        "outputId": "032e8ebd-0b3a-4f30-dedd-88f3fcd12d42"
+        "outputId": "52253566-7569-4ab6-9e9c-0a4a8a91bbb4"
       },
       "execution_count": 13,
       "outputs": [
@@ -895,7 +895,7 @@
           "height": 534
         },
         "id": "6A5AaCxKWvbb",
-        "outputId": "5c2cb5c5-b671-4a41-c164-cd6aed76d76d"
+        "outputId": "46ec967c-da21-4564-c0e3-718ed2f524dd"
       },
       "execution_count": 14,
       "outputs": [
@@ -963,7 +963,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6272498f-844f-40e9-9078-e7699a7d7704\">\n",
+              "  <div id=\"df-39f20eeb-e41e-45f7-9df1-6ea0622ce695\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1299,7 +1299,7 @@
               "</table>\n",
               "<p>302 rows × 43 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6272498f-844f-40e9-9078-e7699a7d7704')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-39f20eeb-e41e-45f7-9df1-6ea0622ce695')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1350,12 +1350,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-6272498f-844f-40e9-9078-e7699a7d7704 button.colab-df-convert');\n",
+              "          document.querySelector('#df-39f20eeb-e41e-45f7-9df1-6ea0622ce695 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-6272498f-844f-40e9-9078-e7699a7d7704');\n",
+              "          const element = document.querySelector('#df-39f20eeb-e41e-45f7-9df1-6ea0622ce695');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1404,7 +1404,7 @@
           "height": 424
         },
         "id": "vrP8OaNKbsbQ",
-        "outputId": "94a54b53-05f8-4951-b1ac-082cfbc50f41"
+        "outputId": "110f4b35-9cb6-4665-deb5-d1e0ce67e82c"
       },
       "execution_count": 16,
       "outputs": [
@@ -1442,7 +1442,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c639eb40-3e6d-4881-8126-dc694c13c9ae\">\n",
+              "  <div id=\"df-d3889729-d9a4-4287-9ba3-0c1daff29744\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1610,7 +1610,7 @@
               "</table>\n",
               "<p>7999 rows × 9 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c639eb40-3e6d-4881-8126-dc694c13c9ae')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d3889729-d9a4-4287-9ba3-0c1daff29744')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1661,12 +1661,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-c639eb40-3e6d-4881-8126-dc694c13c9ae button.colab-df-convert');\n",
+              "          document.querySelector('#df-d3889729-d9a4-4287-9ba3-0c1daff29744 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-c639eb40-3e6d-4881-8126-dc694c13c9ae');\n",
+              "          const element = document.querySelector('#df-d3889729-d9a4-4287-9ba3-0c1daff29744');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1703,7 +1703,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ptWIUqrTYRFT",
-        "outputId": "45c41504-85af-47b7-dfb5-141d1840a969"
+        "outputId": "bf875380-7662-4c74-9850-65e037d5bd84"
       },
       "execution_count": 17,
       "outputs": [
@@ -1751,7 +1751,7 @@
           "height": 312
         },
         "id": "YSOuJJ1BdNcY",
-        "outputId": "13e86b3a-f94f-4e14-896b-9ee156a86d30"
+        "outputId": "bf627782-c331-4d7d-d5f6-b98241867671"
       },
       "execution_count": 19,
       "outputs": [
@@ -1794,7 +1794,7 @@
           "height": 287
         },
         "id": "3FX8pcqOeNx1",
-        "outputId": "b3284b66-5b79-47ec-d3b0-5f5a1e8192a0"
+        "outputId": "9c370362-224d-4192-9d4b-8478407a89d3"
       },
       "execution_count": 20,
       "outputs": [
@@ -1833,7 +1833,7 @@
           "height": 206
         },
         "id": "oO-csefJuL9G",
-        "outputId": "e2cf0ebd-c11d-4933-bb9b-5be5eb2f9f21"
+        "outputId": "2d834641-de11-41f8-bcc0-07db782b6dd7"
       },
       "execution_count": 21,
       "outputs": [
@@ -1857,7 +1857,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d7c04772-8070-4297-8aad-0710b1eb6ba3\">\n",
+              "  <div id=\"df-122b1042-7989-4b3f-b041-09b845dbcf9c\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1952,7 +1952,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d7c04772-8070-4297-8aad-0710b1eb6ba3')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-122b1042-7989-4b3f-b041-09b845dbcf9c')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -2003,12 +2003,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-d7c04772-8070-4297-8aad-0710b1eb6ba3 button.colab-df-convert');\n",
+              "          document.querySelector('#df-122b1042-7989-4b3f-b041-09b845dbcf9c button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-d7c04772-8070-4297-8aad-0710b1eb6ba3');\n",
+              "          const element = document.querySelector('#df-122b1042-7989-4b3f-b041-09b845dbcf9c');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -2042,7 +2042,7 @@
       ],
       "metadata": {
         "id": "X-P5N0LyCL1-",
-        "outputId": "94a9b1bd-1441-476c-ab34-397c4803f52b",
+        "outputId": "b5433644-e095-4f8c-e976-b9efed32e886",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2097,9 +2097,9 @@
           "height": 424
         },
         "id": "ntxG3NPLGKbr",
-        "outputId": "c83b7f28-fd21-431f-d268-f6cd14c8f52e"
+        "outputId": "70b46dbf-a534-4c19-e621-311c2ccb99fc"
       },
-      "execution_count": 24,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2122,7 +2122,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6ba72a82-5e13-4b6c-92c9-22275ba2393d\">\n",
+              "  <div id=\"df-de6ae5d7-3f0c-4dbf-ab21-8ef381280575\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -2218,7 +2218,7 @@
               "</table>\n",
               "<p>7999 rows × 3 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6ba72a82-5e13-4b6c-92c9-22275ba2393d')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-de6ae5d7-3f0c-4dbf-ab21-8ef381280575')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -2269,12 +2269,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-6ba72a82-5e13-4b6c-92c9-22275ba2393d button.colab-df-convert');\n",
+              "          document.querySelector('#df-de6ae5d7-3f0c-4dbf-ab21-8ef381280575 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-6ba72a82-5e13-4b6c-92c9-22275ba2393d');\n",
+              "          const element = document.querySelector('#df-de6ae5d7-3f0c-4dbf-ab21-8ef381280575');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -2297,7 +2297,46 @@
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_filt.sort_values"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "w1dtVAhwRhv3",
+        "outputId": "abc83a1a-2a76-441c-b7ad-53e4a87f9bc9"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<bound method DataFrame.sort_values of                    Name  Age       Nationality\n",
+              "0              L. Messi   31         Argentina\n",
+              "1     Cristiano Ronaldo   33          Portugal\n",
+              "2             Neymar Jr   26            Brazil\n",
+              "3          K. De Bruyne   27           Belgium\n",
+              "4                De Gea   27             Spain\n",
+              "...                 ...  ...               ...\n",
+              "7994         P. Polczak   31            Poland\n",
+              "7995                Pol   26             Spain\n",
+              "7996       M. Di Piazza   30             Italy\n",
+              "7997            F. Ayaz   23            Sweden\n",
+              "7998          B. Reeves   26  Northern Ireland\n",
+              "\n",
+              "[7999 rows x 3 columns]>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
         }
       ]
     }
