--- a/web_scraping.ipynb
+++ b/web_scraping.ipynb
@@ -6,7 +6,7 @@
       "name": "web-scraping.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO+iF1r6ftGWvA1Zw0U1Igj",
+      "authorship_tag": "ABX9TyMIRJ3TSe71obX5O1wCtq4A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,23 +70,51 @@
         "h2_all = soup.find_all('h2', class_='block-title')\n",
         "\n",
         "for h2 in h2_all:\n",
-        "  print(h2.text)"
+        "  print(h2.text)\n",
+        "\n",
+        "option_all = soup.find_all('option')\n",
+        "\n",
+        "for option in option_all:\n",
+        "  print(option.text)"
       ],
       "metadata": {
         "id": "gWlb9Pj_jZde",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fcc6d039-e308-4fbe-db60-9d61dfd73216"
+        "outputId": "ef0d77ab-bfc6-4920-b827-2728a62e24bd"
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Filter Upcoming Events by Field\n",
-            "Filter By Events Type\n"
+            "Filter By Events Type\n",
+            "Select an item\n",
+            "Applied Theory\n",
+            "Behavioral and Experimental\n",
+            "Contracts and Organizations\n",
+            "Diversity, Inclusion and Belonging\n",
+            "Econometrics\n",
+            "Economic Development\n",
+            "Economic History\n",
+            "Environmental\n",
+            "Financial\n",
+            "Health\n",
+            "Industrial Organization (1)\n",
+            "International\n",
+            "Labor\n",
+            "Law\n",
+            "Monetary and Fiscal\n",
+            "Political Economy\n",
+            "Public Policy\n",
+            "Religion\n",
+            "Science\n",
+            "Public Policy\n",
+            "Science\n",
+            "Theory\n"
           ]
         }
       ]
