--- a/web_scraping.ipynb
+++ b/web_scraping.ipynb
@@ -6,7 +6,7 @@
       "name": "web-scraping.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMIRJ3TSe71obX5O1wCtq4A",
+      "authorship_tag": "ABX9TyMOy4MKoOWW714+5s2KHdku",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,23 +75,27 @@
         "option_all = soup.find_all('option')\n",
         "\n",
         "for option in option_all:\n",
-        "  print(option.text)"
+        "  print(option.text)\n",
+        "\n",
+        "h1_alls = soup.find_all('h1', id='page-title')\n",
+        "\n",
+        "for h1s in h1_alls:\n",
+        "  print(h1s.text)"
       ],
       "metadata": {
         "id": "gWlb9Pj_jZde",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ef0d77ab-bfc6-4920-b827-2728a62e24bd"
+        "outputId": "417d4032-a109-45ff-8ff5-ae7d363dbe87"
       },
-      "execution_count": 4,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Filter Upcoming Events by Field\n",
-            "Filter By Events Type\n",
             "Select an item\n",
             "Applied Theory\n",
             "Behavioral and Experimental\n",
@@ -103,7 +107,7 @@
             "Environmental\n",
             "Financial\n",
             "Health\n",
-            "Industrial Organization (1)\n",
+            "Industrial Organization\n",
             "International\n",
             "Labor\n",
             "Law\n",
@@ -114,7 +118,9 @@
             "Science\n",
             "Public Policy\n",
             "Science\n",
-            "Theory\n"
+            "Theory\n",
+            "\n",
+            "\t\t\t\t\t\t\t\t\t\t\t\tSeminars\t\t\t\t\t\t\t\t\t\t\t\n"
           ]
         }
       ]
