--- a/web_scraping.ipynb
+++ b/web_scraping.ipynb
@@ -6,7 +6,7 @@
       "name": "web-scraping.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMOy4MKoOWW714+5s2KHdku",
+      "authorship_tag": "ABX9TyNLkt1k/NvTOm0ncO5scEXB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,12 +70,12 @@
         "h2_all = soup.find_all('h2', class_='block-title')\n",
         "\n",
         "for h2 in h2_all:\n",
-        "  print(h2.text)\n",
+        "  print('h2tag: ' + h2.text)\n",
         "\n",
         "option_all = soup.find_all('option')\n",
         "\n",
         "for option in option_all:\n",
-        "  print(option.text)\n",
+        "  print('optiontag: ' + option.text)\n",
         "\n",
         "h1_alls = soup.find_all('h1', id='page-title')\n",
         "\n",
@@ -87,38 +87,39 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "417d4032-a109-45ff-8ff5-ae7d363dbe87"
+        "outputId": "3948c9b5-ed87-46e5-f716-cce45d2fd00b"
       },
-      "execution_count": 10,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Filter Upcoming Events by Field\n",
-            "Select an item\n",
-            "Applied Theory\n",
-            "Behavioral and Experimental\n",
-            "Contracts and Organizations\n",
-            "Diversity, Inclusion and Belonging\n",
-            "Econometrics\n",
-            "Economic Development\n",
-            "Economic History\n",
-            "Environmental\n",
-            "Financial\n",
-            "Health\n",
-            "Industrial Organization\n",
-            "International\n",
-            "Labor\n",
-            "Law\n",
-            "Monetary and Fiscal\n",
-            "Political Economy\n",
+            "h2tag: Filter Upcoming Events by Field\n",
+            "h2tag: Filter By Events Type\n",
+            "optiontag: Select an item\n",
+            "optiontag: Applied Theory\n",
+            "optiontag: Behavioral and Experimental\n",
+            "optiontag: Contracts and Organizations\n",
+            "optiontag: Diversity, Inclusion and Belonging\n",
+            "optiontag: Econometrics\n",
+            "optiontag: Economic Development\n",
+            "optiontag: Economic History\n",
+            "optiontag: Environmental\n",
+            "optiontag: Financial\n",
+            "optiontag: Health\n",
+            "optiontag: Industrial Organization (2)\n",
+            "optiontag: International\n",
+            "optiontag: Labor (2)\n",
+            "optiontag: Law\n",
+            "optiontag: Monetary and Fiscal\n",
+            "optiontag: Political Economy\n",
+            "optiontag: Public Policy (2)\n",
+            "optiontag: Religion\n",
+            "optiontag: Science\n",
             "Public Policy\n",
-            "Religion\n",
-            "Science\n",
-            "Public Policy\n",
-            "Science\n",
-            "Theory\n",
+            "optiontag: Science\n",
+            "optiontag: Theory\n",
             "\n",
             "\t\t\t\t\t\t\t\t\t\t\t\tSeminars\t\t\t\t\t\t\t\t\t\t\t\n"
           ]
