--- a/web_scraping.ipynb
+++ b/web_scraping.ipynb
@@ -6,7 +6,7 @@
       "name": "web-scraping.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNLkt1k/NvTOm0ncO5scEXB",
+      "authorship_tag": "ABX9TyN2QyMM+uWPqjRsDuWurMqc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,35 +59,35 @@
         "h1_all = soup.find_all('a', rel='bookmark')\n",
         "\n",
         "for fecha in h1_all:\n",
-        "  print(fecha.text)\n",
+        "  print('h1 tag ' + fecha.text)\n",
         "\n",
         "span_all = soup.find_all('span', class_='date-display-single')\n",
         "\n",
         "\n",
         "for span in span_all:\n",
-        "  print(span.text)\n",
+        "  print('span tag ' + span.text)\n",
         "\n",
         "h2_all = soup.find_all('h2', class_='block-title')\n",
         "\n",
         "for h2 in h2_all:\n",
-        "  print('h2tag: ' + h2.text)\n",
+        "  print('h2 tag: ' + h2.text)\n",
         "\n",
         "option_all = soup.find_all('option')\n",
         "\n",
         "for option in option_all:\n",
-        "  print('optiontag: ' + option.text)\n",
+        "  print('option tag: ' + option.text)\n",
         "\n",
         "h1_alls = soup.find_all('h1', id='page-title')\n",
         "\n",
         "for h1s in h1_alls:\n",
-        "  print(h1s.text)"
+        "  print('h1 tag ' + h1s.text)"
       ],
       "metadata": {
         "id": "gWlb9Pj_jZde",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3948c9b5-ed87-46e5-f716-cce45d2fd00b"
+        "outputId": "8b115f8f-31d4-4d7d-d455-2676d276385e"
       },
       "execution_count": 6,
       "outputs": [
@@ -95,32 +95,32 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "h2tag: Filter Upcoming Events by Field\n",
-            "h2tag: Filter By Events Type\n",
-            "optiontag: Select an item\n",
-            "optiontag: Applied Theory\n",
-            "optiontag: Behavioral and Experimental\n",
-            "optiontag: Contracts and Organizations\n",
-            "optiontag: Diversity, Inclusion and Belonging\n",
-            "optiontag: Econometrics\n",
-            "optiontag: Economic Development\n",
-            "optiontag: Economic History\n",
-            "optiontag: Environmental\n",
-            "optiontag: Financial\n",
-            "optiontag: Health\n",
-            "optiontag: Industrial Organization (2)\n",
-            "optiontag: International\n",
-            "optiontag: Labor (2)\n",
-            "optiontag: Law\n",
-            "optiontag: Monetary and Fiscal\n",
-            "optiontag: Political Economy\n",
-            "optiontag: Public Policy (2)\n",
-            "optiontag: Religion\n",
-            "optiontag: Science\n",
+            "h2 tag: Filter Upcoming Events by Field\n",
+            "h2 tag: Filter By Events Type\n",
+            "option tag: Select an item\n",
+            "option tag: Applied Theory\n",
+            "option tag: Behavioral and Experimental\n",
+            "option tag: Contracts and Organizations\n",
+            "option tag: Diversity, Inclusion and Belonging\n",
+            "option tag: Econometrics\n",
+            "option tag: Economic Development\n",
+            "option tag: Economic History\n",
+            "option tag: Environmental\n",
+            "option tag: Financial\n",
+            "option tag: Health\n",
+            "option tag: Industrial Organization (2)\n",
+            "option tag: International\n",
+            "option tag: Labor (2)\n",
+            "option tag: Law\n",
+            "option tag: Monetary and Fiscal\n",
+            "option tag: Political Economy\n",
+            "option tag: Public Policy (2)\n",
+            "option tag: Religion\n",
+            "option tag: Science\n",
             "Public Policy\n",
-            "optiontag: Science\n",
-            "optiontag: Theory\n",
-            "\n",
+            "option tag: Science\n",
+            "option tag: Theory\n",
+            "h1 tag \n",
             "\t\t\t\t\t\t\t\t\t\t\t\tSeminars\t\t\t\t\t\t\t\t\t\t\t\n"
           ]
         }
