--- a/web_scraping.ipynb
+++ b/web_scraping.ipynb
@@ -6,7 +6,7 @@
       "name": "web-scraping.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN2QyMM+uWPqjRsDuWurMqc",
+      "authorship_tag": "ABX9TyMvcG8grQWiOrTjij1yhHLd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,7 +75,7 @@
         "option_all = soup.find_all('option')\n",
         "\n",
         "for option in option_all:\n",
-        "  print('option tag: ' + option.text)\n",
+        "  print('option tag: ' + option.text[0])\n",
         "\n",
         "h1_alls = soup.find_all('h1', id='page-title')\n",
         "\n",
@@ -87,9 +87,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8b115f8f-31d4-4d7d-d455-2676d276385e"
+        "outputId": "5a08116c-87e3-4107-f1a2-8db404dd0f12"
       },
-      "execution_count": 6,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,29 +97,28 @@
           "text": [
             "h2 tag: Filter Upcoming Events by Field\n",
             "h2 tag: Filter By Events Type\n",
-            "option tag: Select an item\n",
-            "option tag: Applied Theory\n",
-            "option tag: Behavioral and Experimental\n",
-            "option tag: Contracts and Organizations\n",
-            "option tag: Diversity, Inclusion and Belonging\n",
-            "option tag: Econometrics\n",
-            "option tag: Economic Development\n",
-            "option tag: Economic History\n",
-            "option tag: Environmental\n",
-            "option tag: Financial\n",
-            "option tag: Health\n",
-            "option tag: Industrial Organization (2)\n",
-            "option tag: International\n",
-            "option tag: Labor (2)\n",
-            "option tag: Law\n",
-            "option tag: Monetary and Fiscal\n",
-            "option tag: Political Economy\n",
-            "option tag: Public Policy (2)\n",
-            "option tag: Religion\n",
-            "option tag: Science\n",
-            "Public Policy\n",
-            "option tag: Science\n",
-            "option tag: Theory\n",
+            "option tag: S\n",
+            "option tag: A\n",
+            "option tag: B\n",
+            "option tag: C\n",
+            "option tag: D\n",
+            "option tag: E\n",
+            "option tag: E\n",
+            "option tag: E\n",
+            "option tag: E\n",
+            "option tag: F\n",
+            "option tag: H\n",
+            "option tag: I\n",
+            "option tag: I\n",
+            "option tag: L\n",
+            "option tag: L\n",
+            "option tag: M\n",
+            "option tag: P\n",
+            "option tag: P\n",
+            "option tag: R\n",
+            "option tag: S\n",
+            "option tag: S\n",
+            "option tag: T\n",
             "h1 tag \n",
             "\t\t\t\t\t\t\t\t\t\t\t\tSeminars\t\t\t\t\t\t\t\t\t\t\t\n"
           ]
