--- a/web_scraping.ipynb
+++ b/web_scraping.ipynb
@@ -6,7 +6,7 @@
       "name": "web-scraping.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMvcG8grQWiOrTjij1yhHLd",
+      "authorship_tag": "ABX9TyNGkjyPz+su+H179JiEsTVl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,7 +75,7 @@
         "option_all = soup.find_all('option')\n",
         "\n",
         "for option in option_all:\n",
-        "  print('option tag: ' + option.text[0])\n",
+        "  print('option tag: ' + option.text[0] + option.text)\n",
         "\n",
         "h1_alls = soup.find_all('h1', id='page-title')\n",
         "\n",
@@ -87,9 +87,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5a08116c-87e3-4107-f1a2-8db404dd0f12"
+        "outputId": "7f6adf46-eb74-4b07-dbd6-80518386cab8"
       },
-      "execution_count": 9,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,28 +97,29 @@
           "text": [
             "h2 tag: Filter Upcoming Events by Field\n",
             "h2 tag: Filter By Events Type\n",
-            "option tag: S\n",
-            "option tag: A\n",
-            "option tag: B\n",
-            "option tag: C\n",
-            "option tag: D\n",
-            "option tag: E\n",
-            "option tag: E\n",
-            "option tag: E\n",
-            "option tag: E\n",
-            "option tag: F\n",
-            "option tag: H\n",
-            "option tag: I\n",
-            "option tag: I\n",
-            "option tag: L\n",
-            "option tag: L\n",
-            "option tag: M\n",
-            "option tag: P\n",
-            "option tag: P\n",
-            "option tag: R\n",
-            "option tag: S\n",
-            "option tag: S\n",
-            "option tag: T\n",
+            "option tag: SSelect an item\n",
+            "option tag: AApplied Theory\n",
+            "option tag: BBehavioral and Experimental\n",
+            "option tag: CContracts and Organizations\n",
+            "option tag: DDiversity, Inclusion and Belonging\n",
+            "option tag: EEconometrics\n",
+            "option tag: EEconomic Development\n",
+            "option tag: EEconomic History\n",
+            "option tag: EEnvironmental\n",
+            "option tag: FFinancial\n",
+            "option tag: HHealth\n",
+            "option tag: IIndustrial Organization (2)\n",
+            "option tag: IInternational\n",
+            "option tag: LLabor (2)\n",
+            "option tag: LLaw\n",
+            "option tag: MMonetary and Fiscal\n",
+            "option tag: PPolitical Economy\n",
+            "option tag: PPublic Policy (2)\n",
+            "option tag: RReligion\n",
+            "option tag: SScience\n",
+            "Public Policy\n",
+            "option tag: SScience\n",
+            "option tag: TTheory\n",
             "h1 tag \n",
             "\t\t\t\t\t\t\t\t\t\t\t\tSeminars\t\t\t\t\t\t\t\t\t\t\t\n"
           ]
