--- a/web_scraping.ipynb
+++ b/web_scraping.ipynb
@@ -6,7 +6,7 @@
       "name": "web-scraping.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNGkjyPz+su+H179JiEsTVl",
+      "authorship_tag": "ABX9TyPD9sEcF2MlFM62UZVFkauU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,7 +70,7 @@
         "h2_all = soup.find_all('h2', class_='block-title')\n",
         "\n",
         "for h2 in h2_all:\n",
-        "  print('h2 tag: ' + h2.text)\n",
+        "  print('h2 tag: ' + h2.text[0] + h2.text)\n",
         "\n",
         "option_all = soup.find_all('option')\n",
         "\n",
@@ -87,7 +87,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7f6adf46-eb74-4b07-dbd6-80518386cab8"
+        "outputId": "a9ec47a9-3597-41b5-cfbe-943412d5b63d"
       },
       "execution_count": 3,
       "outputs": [
@@ -95,8 +95,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "h2 tag: Filter Upcoming Events by Field\n",
-            "h2 tag: Filter By Events Type\n",
+            "h2 tag: FFilter Upcoming Events by Field\n",
+            "h2 tag: FFilter By Events Type\n",
             "option tag: SSelect an item\n",
             "option tag: AApplied Theory\n",
             "option tag: BBehavioral and Experimental\n",
@@ -108,13 +108,13 @@
             "option tag: EEnvironmental\n",
             "option tag: FFinancial\n",
             "option tag: HHealth\n",
-            "option tag: IIndustrial Organization (2)\n",
+            "option tag: IIndustrial Organization (1)\n",
             "option tag: IInternational\n",
-            "option tag: LLabor (2)\n",
+            "option tag: LLabor\n",
             "option tag: LLaw\n",
             "option tag: MMonetary and Fiscal\n",
             "option tag: PPolitical Economy\n",
-            "option tag: PPublic Policy (2)\n",
+            "option tag: PPublic Policy\n",
             "option tag: RReligion\n",
             "option tag: SScience\n",
             "Public Policy\n",
